--- a/Simplyfly/src/main/resources/application.properties
+++ b/Simplyfly/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=simplyfly
+spring.datasource.platform=mysql
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/simplyfly
+spring.datasource.username=root
+spring.datasource.password=root4321
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
