REST Controller Done

--- a/Simplyfly/src/main/resources/application.properties
+++ b/Simplyfly/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=simplyfly
 spring.datasource.platform=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/simplyfly
+spring.datasource.url=jdbc:mysql://localhost:3306/testing
 spring.datasource.username=root
 spring.datasource.password=root4321
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+jwt.secret=KZr9X4SdTcGwB4qTm8V5O1f3LpdN+s9lga5yQ1wQnI4=
+jwt.expiration-ms=3600000  
